--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,6 +6,12 @@
   "files": [
     "README.md"
   ],
+  "types": {
+    "marketing": {
+      "symbol": "💌",
+      "description": "Marketing - People who help in marketing the repo/project"
+    }
+  },
   "imageSize": 100,
   "commit": true,
   "commitConvention": "atom",
@@ -18,6 +24,15 @@
       "contributions": [
         "projectManagement",
         "code"
+      ]
+    },
+    {
+      "login": "sdesani",
+      "name": "Santosh Desani",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/10603196?v=4",
+      "profile": "https://github.com/sdesani",
+      "contributions": [
+        "marketing"
       ]
     }
   ],
