:memo: Add @aakash1822 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -52,6 +52,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Aakash1822",
+      "name": "Aakash Singh",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/30810386?v=4",
+      "profile": "https://staticai.blogspot.com",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7
