:memo: Add @irfansener as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -70,6 +70,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "irfansener",
+      "name": "İrfan Şener",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/2094635?v=4",
+      "profile": "http://www.irfansener.com",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
