--- a/package.json
+++ b/package.json
@@ -23,11 +23,26 @@
   },
   "dependencies": {
     "atom-grammar-test": "^0.6.4",
-    "tree-sitter-legesher-python": "^0.15.1"
+    "tree-sitter-legesher-python": "^0.15.2"
   },
   "devDependencies": {
-    "all-contributors-cli": "^6.9.2",
+    "@unibeautify/beautifier-black": "^0.1.1",
+    "@unibeautify/beautifier-eslint": "^0.6.0",
+    "@unibeautify/beautifier-js-beautify": "^0.4.0",
+    "@unibeautify/beautifier-prettier": "^0.9.0",
+    "@unibeautify/beautifier-prettydiff": "^0.6.0",
+    "@unibeautify/beautifier-yapf": "^0.3.0",
+    "@unibeautify/cli": "^0.5.1",
+    "all-contributors-cli": "^6.9.3",
     "coffeelint": "^2.1.0",
-    "electron-rebuild": "^1.8.6"
+    "electron-rebuild": "^1.8.6",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "js-beautify": "^1.10.2",
+    "prettier": "^1.18.2",
+    "prettydiff2": "^2.2.8",
+    "unibeautify-cli": "^0.2.1"
   }
 }
