--- a/.github/workflows/commit-issue.yml
+++ b/.github/workflows/commit-issue.yml
@@ -7,12 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to create an issue if a commit was made
     steps:
-      - uses: actions/checkout@v1
       - name: Commit issue action step
         id: issue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: ./.github/actions/commit-issue-action
+        uses: wescran/commit-issue-action@v2.1.0
         with:
           sourceRepo: 'atom/language-python'
           targetRepo: 'legesher/language-legesher-python'
