Sync: prepare for 0.53.5 release

--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   },
   "dependencies": {
     "atom-grammar-test": "^0.6.4",
-    "tree-sitter-legesher-python": "^0.15.3",
-    "minimist": ">=1.2.2"
+    "minimist": ">=1.2.2",
+    "tree-sitter-cli": "^0.17.2",
+    "tree-sitter-legesher-python": "^0.15.4"
   },
   "devDependencies": {
     "@unibeautify/beautifier-black": "^0.1.2",
